--- a/index.html
+++ b/index.html
@@ -1416,7 +1416,7 @@
 		.zuo {
 			width: 12%;
 			float: left;
-			background-color: rgb(155, 155, 155);
+			background-color: rgb(189, 189, 189);
 			/* side bar color!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
 			min-height: 5400px;
 			position: fixed;
@@ -1506,8 +1506,8 @@
 			In following summer, I was at UTIAS Lab researched on-board multi-sensor calibration, supervised by Prof.
 			Jonathan Kelly.
 			Now I am working with my FYP research about GPU accelerated mapping under the supervision of Prof. Chen
-			Benmei.
-			My CGPA is 3.845, Major GPA 3.955, both Rank 1 in my major.</p>
+			Benmei.</p>
+		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.955, both Rank 1 in my major.</p>
 
 		<p>&nbsp;</p>
 
@@ -1568,10 +1568,10 @@
 		Supervisor: Prof. Jonathan Kelly, Space and Terrestrial Autonomous Robotic Systems laboratory, UofT
 		<ul>
 			<li>
-
+				Collaborating with colleagues on projects involving multi-agent SLAM and on-board sensor calibration.
 			</li>
 			<li>
-
+				Realizing Gauss-Newton solver for trajectory alignment optimization in hand-eye calibration context.
 			</li>
 		</ul>
 
@@ -1598,7 +1598,7 @@
 		<h4 id='Experience'>Experience </h4>
 
 		<div class="box_">
-			<p><strong>BlockStudio Qianzhi Technology LTD - <em>System Engineer</em> </strong> <span
+			<p><strong>BlockStudio Qianzhi Technology Ltd. - <em>System Engineer</em> </strong> <span
 					style="float:right;">June 2021 -
 					September 2021</span></p>
 
