--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		#honours,
 		#Experience,
 		#Leadership,
-		#special-courses-taken {
+		#courses {
 			text-align: left !important;
 		}
 
@@ -45,7 +45,7 @@
 		#honours::after,
 		#Experience::after,
 		#Leadership::after,
-		#special-courses-taken::after {
+		#courses::after {
 			margin: 0;
 		}
 
@@ -1482,7 +1482,7 @@
 			<a href="#a4">Research</a>
 			<a href="#a5">Experience</a>
 			<a href="#a6">Leadership</a>
-			<a href="#a7">Courses Taken</a>
+			<a href="#a7">Courses</a>
 			<!-- <a href="#">Awards</a> -->
 		</nav>
 	</div>
@@ -1678,7 +1678,7 @@
 
 
 		<a href="###" name="a7"></a>
-		<h4 id='special-courses-taken'>Courses</h4>
+		<h4 id='courses'>Courses</h4>
 		<p>Postgraduate Course:</p>
 		<div style="float: left">ENGG5402 Advanced Robotics</div>
 		<div style="margin: 0 auto; width: 200px; float: right;">A</div>
