--- a/index.html
+++ b/index.html
@@ -1517,7 +1517,7 @@
 			<li>2019-20, Talent Development Scholarship <span style="margin: 0 auto; width: 250px;float:right;">(HK
 					Government)</span></li>
 			<li>2019-20, Elite Scholarship <span style="margin: 0 auto; width: 250px;float:right;">(Elite
-					Program)</span></li>
+					Stream)</span></li>
 			<li>2019-20, Best Project Award for Summer Research <span
 					style="margin: 0 auto; width: 250px;float:right;">(Faculty of
 					Engineering)</span></li>
@@ -1529,7 +1529,7 @@
 			<li>2020-21, Yu To Sang Memorial Scholarship <span
 					style="margin: 0 auto; width: 250px;float: right;">(University)</span></li>
 			<li>2020-21, Elite Scholarship <span style="margin: 0 auto; width: 250px;float: right;">(Elite
-					Program)</span>
+					Stream)</span>
 			</li>
 			<li>2020-21, NTK Industrial Scholarship <span style="margin: 0 auto; width: 250px;float: right;">(Department
 					of MAE)</span></li>
@@ -1551,7 +1551,7 @@
 			<li>2021-22, Dahua Education Scholarship <span
 					style="margin: 0 auto; width: 250px; float: right;">(Department of MAE)</span></li>
 			<li>2021-22, Elite Scholarship <span style="margin: 0 auto; width: 250px; float: right;">(Elite
-					Program)</span>
+					Stream)</span>
 			</li>
 
 		</ul>
@@ -1690,7 +1690,10 @@
 		<div style="margin: 0 auto; width: 200px; float: right;">A+</div>
 		<div style="clear: both;"></div>
 		<p></p>
-		<p>Elite Course (offered by Elite Program in Faculty of Engineering):</p>
+		<p>Elite Stream:</p>
+		<p>Elite Stream is to students with excellent academic performance only, aiming to develop their potentials
+			through additional challenging coursework and invaluable extra-curricular activities. Details can be found
+			at <a>https://www.erg.cuhk.edu.hk/erg/Elite</a>.</p>
 		<div style="float: left">ESTR2014 Complex Variables for Engineers</div>
 		<div style="margin: 0 auto; width: 200px; float: right;">A</div>
 		<div style="clear: both;"></div>
