--- a/index.html
+++ b/index.html
@@ -1501,9 +1501,10 @@
 		<a href="###" name="a2"></a>
 		<h4 id='biography'>Biography</h4>
 		<p style="text-indent: 2em;">I am currently a final year undergraduate at CUHK.
-			My research interest is UAV mapping and planning.
+			My research interest is Robotics.
 			I visited University of Toronto as an exchange student for a semester in my third year.
-			In following summer, I was at UTIAS Lab researched on-board multi-sensor calibration, supervised by Prof.
+			In following summer, I was at UTIAS Lab researched on-board multi-sensor calibration optimization,
+			supervised by Prof.
 			Jonathan Kelly.
 			Now I am working with my FYP research about GPU accelerated mapping under the supervision of Prof. Chen
 			Benmei.</p>
