--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,20 @@
 		<a href="###" name="a4"></a>
 		<h4 id='Research'>Research </h4>
 
+		<p><strong>GPU accelerated mapping and planning </strong> <span style="float:right;">August 2022
+				-
+				Present</span></p>
+
+		Supervisor: Prof. Chen Benmei, MAE CUHK & ECE NUS
+		<ul>
+			<li>
+				Collaborating with colleagues on GPU-accelerated Incremental Euclidean Distance Transform.
+			</li>
+			<li>
+				Adjusting SPARK Hydra for high-level understanding and planning, using GPU-built incremental ESDF maps.
+			</li>
+		</ul>
+
 		<p><strong>Multi-sensors Trajectories Optimization </strong> <span style="float:right;">May 2022
 				-
 				September 2022</span></p>
@@ -1572,7 +1586,8 @@
 				Collaborating with colleagues on projects involving multi-agent SLAM and on-board sensor calibration.
 			</li>
 			<li>
-				Realizing Gauss-Newton solver for trajectory alignment optimization in hand-eye calibration context.
+				Optimizing and comparing trajectory alignment results by varied cost functions in hand-eye calibration
+				context.
 			</li>
 		</ul>
 
@@ -1588,8 +1603,7 @@
 			</li>
 			<li>
 				Use MATLAB to simulate the position and speed of the UAV at each moment and generate
-				a video to visualize the results. In the final presentation, we won the annual Best Project Award
-				and the follow-up research funding 8000HKD provided by the faculty.
+				a video to visualize the results. In the final presentation, we won the annual Best Project Award.
 			</li>
 		</ul>
 
