--- a/index.html
+++ b/index.html
@@ -1494,7 +1494,7 @@
 		<h4 id='Education'>Education</h4>
 		<li><b>B.S.</b> Mechanical and Automation Engineering - The Chinese University of Hong Kong, 2019-2023</li>
 
-		<li><b>Exchange</b> Mechanical & Industrial Engineering - University of Toronto, 2022 Winter</li>
+		<li><b>Exchange</b> Robotics - University of Toronto Institute for Aerospace Studies, 2022 Winter</li>
 
 		<p>&nbsp;</p>
 
