--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@
 
 
 
-	<title>Wang Wenhao's Personal Website</title>
+	<title>Wang Wenhao's Homepage</title>
 	<style type="text/css">
 		body {
 			width: 1200px;
