--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,7 @@
 			Jonathan Kelly.
 			Now I am working with my FYP research about GPU accelerated mapping under the supervision of Prof. Chen
 			Benmei.</p>
-		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.955, both Rank 1 in my major.</p>
+		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.948, both ranking 1 in my major.</p>
 
 		<p>&nbsp;</p>
 
@@ -1578,16 +1578,18 @@
 
 		<p><strong>Multi-sensors Trajectories Optimization </strong> <span style="float:right;">May 2022
 				-
-				September 2022</span></p>
+				October 2022</span></p>
 
-		Supervisor: Prof. Jonathan Kelly, Space and Terrestrial Autonomous Robotic Systems laboratory, UofT
+		Supervisor: Prof. Jonathan Kelly, Space and Terrestrial Autonomous Robotic Systems Laboratory, UofT
 		<ul>
 			<li>
-				Collaborating with colleagues on projects involving multi-agent SLAM and on-board sensor calibration.
+				Collaborated with colleagues on projects involving multi-agent SLAM and on-board sensor calibration.
+			</li>
+      <li>
+				Optimized trajectory alignment results by convex relaxation techniques and compared it with the results from varied cost functions.
 			</li>
 			<li>
-				Optimizing and comparing trajectory alignment results by varied cost functions in hand-eye calibration
-				context.
+				Realized the linear solver and GN solver as comparative methods. Tested ORB-SLAM3 for generating the raw data.
 			</li>
 		</ul>
 
@@ -1597,12 +1599,12 @@
 		Supervisor: Dr. Han Dongkun, Department of Mechanical and Automation Engineering, CUHK
 		<ul>
 			<li>
-				Design UAV control algorithm. Redesign the barrier function and control algorithm, and find a new
-				Lyapunov function, to make it satisfy the time convergence requirement and stability requirement at the
+				Designed UAV control algorithm. Redesigned the barrier function and control algorithm, and found a new
+				Lyapunov function to make it satisfy the time convergence requirement and stability requirement at the
 				same time.
 			</li>
 			<li>
-				Use MATLAB to simulate the position and speed of the UAV at each moment and generate
+				Used MATLAB to simulate the position and speed of the UAV at each moment and generated
 				a video to visualize the results. In the final presentation, we won the annual Best Project Award.
 			</li>
 		</ul>
@@ -1678,7 +1680,7 @@
 		<p><strong>2021 Exemplar Tournament Freshman Mandarin Debate Competition - <em>Founder</em></strong><span
 				style="float:right;">March 2021 - May 2021</span></p>
 		<ul>
-			<li>Firstly host the &quot;Exemplar Tournament&quot; Freshman Mandarin Debate Competition representing
+			<li>Firstly founded the &quot;Exemplar Tournament&quot; Freshman Mandarin Debate Competition representing
 				CUHK.
 				The competition received more than 14,000HKD funding support from the school, and the results of the
 				competition is displayed on the homepage of the CUHK Office of Student Affairs.</li>
@@ -1721,9 +1723,7 @@
 		<div style="float: left">ESTR3406 Introduction to Control Systems</div>
 		<div style="margin: 0 auto; width: 200px; float: right;">A</div>
 		<div style="clear: both;"></div>
-		<p>Report of Control System see <a
-				href='https://drive.google.com/file/d/1wBXtuvt-ItaLaj6LZd1VIFnqf0ACJvuJ/view?usp=sharing'>here</a>.
-		</p>
+		
 		<p>&nbsp;</p>
 
 
