--- a/index.html
+++ b/index.html
@@ -1569,27 +1569,36 @@
 		Supervisor: Prof. Chen Benmei, MAE CUHK & ECE NUS
 		<ul>
 			<li>
-				Collaborating with colleagues on GPU-accelerated Incremental Euclidean Distance Transform.
+				Working on the combination of the mapping and planning by GPU on limited onboard computational resources and weight.
 			</li>
 			<li>
-				Adjusting SPARK Hydra for high-level understanding and planning, using GPU-built incremental ESDF maps.
+				Proposed to utilize the accelerated Euclidean Distance Transforms (EDTs) with GPU and SPARK’s Hydra planning function.
+			</li>
+      <li>
+				Built up the simulation environment on ROS and initially tested the feasibility of the idea.
+			</li>
+      <li>
+				Will prune the unnecessary function to improve the computational speed and conduct real-world testing in the following.
 			</li>
 		</ul>
 
-		<p><strong>Multi-sensors Trajectories Optimization </strong> <span style="float:right;">May 2022
+		<p><strong>Multi-Sensors Extrinsic Parameters Calibration Optimization </strong> <span style="float:right;">May 2022
 				-
 				October 2022</span></p>
 
 		Supervisor: Prof. Jonathan Kelly, Space and Terrestrial Autonomous Robotic Systems Laboratory, UofT
 		<ul>
 			<li>
-				Collaborated with colleagues on projects involving multi-agent SLAM and on-board sensor calibration.
+        Optimized trajectory alignment by SDP relaxation to calibrate the relative extrinsic parameters of the multi-camera.
 			</li>
       <li>
-				Optimized trajectory alignment results by convex relaxation techniques and compared it with the results from varied cost functions.
+				Independently completed GN solver dealing with scale cases and derived the Lie algebra pose perturbation model.
 			</li>
 			<li>
-				Realized the linear solver and GN solver as comparative methods. Tested ORB-SLAM3 for generating the raw data.
+				Realized the linear solver proposed before as a comparative method. Tested ORB-SLAM3 for generating the raw data.
+			</li>
+      <li>
+				Contributed to the visualization and generated diagrams in the paper.
 			</li>
 		</ul>
 
@@ -1599,13 +1608,16 @@
 		Supervisor: Dr. Han Dongkun, Department of Mechanical and Automation Engineering, CUHK
 		<ul>
 			<li>
-				Designed UAV control algorithm. Redesigned the barrier function and control algorithm, and found a new
-				Lyapunov function to make it satisfy the time convergence requirement and stability requirement at the
-				same time.
+				Designed UAV control algorithm. Redesigned the barrier function and control algorithm, and found a new Lyapunov function to satisfy the time convergence requirement and stability requirement simultaneously.
 			</li>
 			<li>
-				Used MATLAB to simulate the position and speed of the UAV at each moment and generated
-				a video to visualize the results. In the final presentation, we won the annual Best Project Award.
+				Innovatively overcame the initial velocities dilemma by introducing the term of closed barrier function.
+			</li>
+      <li>
+				Simulated the position and speed of the UAVs by MATLAB at each timestep and generated a video to visualize the results.
+			</li>
+      <li>
+				In the final presentation, we won the annual Best Project Award. I was awarded the Innovation and Creativity Scholarship.
 			</li>
 		</ul>
 
@@ -1615,28 +1627,33 @@
 		<h4 id='Experience'>Experience </h4>
 
 		<div class="box_">
-			<p><strong>BlockStudio Qianzhi Technology Ltd. - <em>System Engineer</em> </strong> <span
+			<p><strong>BlockStudio Qianzhi Technology Ltd. - <em>Mechanical Engineer</em> </strong> <span
 					style="float:right;">June 2021 -
 					September 2021</span></p>
 
 			<ul>
 				<li>
-					Designed the mechanical devices to deliver and separate blocks for further sorting.
+					Responsible for designing and optimization of the mechanical devices to deliver and separate toy blocks.
 				</li>
 				<li>
-					Coordinated hardware and software. Using pre-trained model, adjusted the computer vision code to
-					improve the recognition accuracy.
+					Contributed to the designing and testing of the three-stage differential conveyor belt plan and vibrating plate plan.
+				</li>
+        <li>
+					Independently designed the toy blocks assembly line by SolidWorks and designed the delivery plan.
+				</li>
+        <li>
+					Explored the feasibility of the robotic arm automatic grasping scheme, and the scheme has been implemented.
 				</li>
 			</ul>
 
-			<p><strong>2021 National Engineering Practice Competition - <em>System Engineer</em>
+			<p><strong>2021 National Engineering Practice Competition (Logistics Robot)
 				</strong> <span style="float:right;">January 2021
 					-
 					June 2021</span></p>
 
 			<ul>
 				<li>
-					We won the <b>Silver Award in the national final</b> among 601 teams from 267 universities. The
+					Won 1st place in Hong Kong, Silver Award in the national final among 601 teams from 267 universities. The
 					result
 					was
 					featured in
