--- a/index.html
+++ b/index.html
@@ -1554,6 +1554,15 @@
 			<li>2021-22, Elite Scholarship <span style="margin: 0 auto; width: 250px; float: right;">(Elite
 					Stream)</span>
 			</li>
+      <li>2021-22, Outstanding Students Award <span style="margin: 0 auto; width: 250px;float: right;">(University)</span>
+			</li>
+
+		</ul>
+    
+    <ul>
+			<li>2022-23, Yu To Sang Memorial Scholarship <span
+					style="margin: 0 auto; width: 250px;float: right;">(University)</span></li>
+			</li>
 
 		</ul>
 		<p>&nbsp;</p>
