--- a/index.html
+++ b/index.html
@@ -1581,7 +1581,7 @@
 				Working on the combination of the mapping and planning by GPU on limited onboard computational resources and weight.
 			</li>
 			<li>
-				Proposed to utilize the accelerated Euclidean Distance Transforms (EDTs) with GPU and SPARK’s Hydra planning function.
+				Together proposed to utilize the accelerated Euclidean Distance Transforms (EDTs) with GPU and SPARK’s Hydra planning function.
 			</li>
       <li>
 				Built up the simulation environment on ROS and initially tested the feasibility of the idea.
