--- a/index.html
+++ b/index.html
@@ -1458,7 +1458,7 @@
 		</style>
 		<div class="img_1"><img
 				style="border-radius: 50%; width: 150px; height: 150px; display: block; margin: 30px auto 30px auto;"
-				src="pic\me.png" alt=""><span
+				src="pic\round ID photo.png" alt=""><span
 				style="text-align: center; display:block; color:#fff; margin-top:-10px; !important">
 
 				<h4>Wang
