--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,7 @@
 					alt=""></a>
 			<a href="https://github.com/Hao-Starrr"><img style="border-radius: 50%; width: 30px; height: 30px;"
 					src="pic\GitHub.png" alt=""></a>
-			<a href=""><img style="border-radius: 50%; width: 30px; height: 30px;" src="pic\Linkedin.png" alt=""></a>
+			<a href="https://www.linkedin.com/in/wenhao-wang-592673254/"><img style="border-radius: 50%; width: 30px; height: 30px;" src="pic\Linkedin.png" alt=""></a>
 			<div style="clear: left;"></div>
 		</div>
 		<nav>
