--- a/index.html
+++ b/index.html
@@ -1472,7 +1472,8 @@
 					alt=""></a>
 			<a href="https://github.com/Hao-Starrr"><img style="border-radius: 50%; width: 30px; height: 30px;"
 					src="pic\GitHub.png" alt=""></a>
-			<a href="https://www.linkedin.com/in/wenhao-wang-592673254/"><img style="border-radius: 50%; width: 30px; height: 30px;" src="pic\Linkedin.png" alt=""></a>
+			<a href="https://www.linkedin.com/in/wenhao-wang-592673254/"><img
+					style="border-radius: 50%; width: 30px; height: 30px;" src="pic\Linkedin.png" alt=""></a>
 			<div style="clear: left;"></div>
 		</div>
 		<nav>
@@ -1504,11 +1505,10 @@
 			My research interest is Robotics.
 			I visited University of Toronto as an exchange student for a semester in my third year.
 			In following summer, I was at UTIAS Lab researched on-board multi-sensor calibration optimization,
-			supervised by Prof.
-			Jonathan Kelly.
+			supervised by Prof. Jonathan Kelly.
 			Now I am working with my FYP research about GPU accelerated mapping under the supervision of Prof. Chen
 			Benmei.</p>
-		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.948, both ranking 1 at CUHK.</p>
+		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.948, both ranking 1/128 at CUHK.</p>
 
 		<p>&nbsp;</p>
 
@@ -1517,6 +1517,7 @@
 		<ul>
 			<li>2019-20, Talent Development Scholarship <span style="margin: 0 auto; width: 250px;float:right;">(HK
 					Government)</span></li>
+			<p>For being top 0.1% in Chinese Physics Olympiad.</p>
 			<li>2019-20, Elite Scholarship <span style="margin: 0 auto; width: 250px;float:right;">(Elite
 					Stream)</span></li>
 			<li>2019-20, Best Project Award for Summer Research <span
@@ -1527,7 +1528,7 @@
 
 		</ul>
 		<ul>
-			<li>2020-21, Yu To Sang Memorial Scholarship <span
+			<li>2020-21, Yu To Sang Memorial Scholarship (Less than 1%) <span
 					style="margin: 0 auto; width: 250px;float: right;">(University)</span></li>
 			<li>2020-21, Elite Scholarship <span style="margin: 0 auto; width: 250px;float: right;">(Elite
 					Stream)</span>
@@ -1538,13 +1539,14 @@
 					style="margin: 0 auto; width: 250px;float: right;">(WYS College)</span></li>
 			<li>2020-21, Dean’s List <span style="margin: 0 auto; width: 250px;float: right;">(Faculty of
 					Engineering)</span></li>
-			<li>2020-21, Master’s List <span style="margin: 0 auto; width: 250px;float: right;">(WYS College)</span>
+			<li>2020-21, Master’s List (To top 1 only) <span style="margin: 0 auto; width: 250px;float: right;">(WYS
+					College)</span>
 			</li>
 
 		</ul>
 
 		<ul>
-			<li>2021-22, Yu To Sang Memorial Scholarship <span
+			<li>2021-22, Yu To Sang Memorial Scholarship (Less than 1%) <span
 					style="margin: 0 auto; width: 250px; float: right;">(University)</span></li>
 			<li>2021-22, Yasumoto International Exchange Scholarship <span
 					style="margin: 0 auto; width: 250px;float: right;">(University)</span>
@@ -1554,13 +1556,14 @@
 			<li>2021-22, Elite Scholarship <span style="margin: 0 auto; width: 250px; float: right;">(Elite
 					Stream)</span>
 			</li>
-      <li>2021-22, Outstanding Students Award <span style="margin: 0 auto; width: 250px;float: right;">(University)</span>
+			<li>2021-22, Outstanding Students Award <span
+					style="margin: 0 auto; width: 250px;float: right;">(University)</span>
 			</li>
 
 		</ul>
-    
-    <ul>
-			<li>2022-23, Yu To Sang Memorial Scholarship <span
+
+		<ul>
+			<li>2022-23, Yu To Sang Memorial Scholarship (Less than 1%) <span
 					style="margin: 0 auto; width: 250px;float: right;">(University)</span></li>
 			</li>
 
@@ -1571,42 +1574,50 @@
 		<a href="###" name="a4"></a>
 		<h4 id='Research'>Research </h4>
 
-		<p><strong>GPU accelerated mapping and planning </strong> <span style="float:right;">August 2022
+		<p><strong>GPU-Accelerated Mapping and 3D Scene Graph-Based Planning </strong> <span style="float:right;">August
+				2022
 				-
 				Present</span></p>
 
 		Supervisor: Prof. Chen Benmei, MAE CUHK & ECE NUS
 		<ul>
 			<li>
-				Working on the combination of the mapping and planning by GPU on limited onboard computational resources and weight.
+				Working on the combination of the mapping and planning on limited onboard computational resources.
 			</li>
 			<li>
-				Together proposed to utilize the accelerated Euclidean Distance Transforms (EDTs) with GPU and SPARK’s Hydra planning function.
+				Collaboratively proposed to utilize the GPU-accelerated ESDFs and 3D Scene Graph for planning.
 			</li>
-      <li>
-				Built up the simulation environment on ROS and initially tested the feasibility of the idea.
+			<li>
+				Built up the simulation environment on ROS and initially tested the idea’s feasibility.
 			</li>
-      <li>
-				Will prune the unnecessary function to improve the computational speed and conduct real-world testing in the following.
+			<li>
+				Deployed mapping and planning functions on UAV and will prune the unnecessary function to improve the
+				computational
+				speed.
 			</li>
 		</ul>
 
-		<p><strong>Multi-Sensors Extrinsic Parameters Calibration Optimization </strong> <span style="float:right;">May 2022
+		<p><strong>Certifiably Multi-Sensors Extrinsic Parameters Calibration Optimization </strong> <span
+				style="float:right;">May
+				2022
 				-
 				October 2022</span></p>
 
-		Supervisor: Prof. Jonathan Kelly, Space and Terrestrial Autonomous Robotic Systems Laboratory, UofT
+		Supervisor: Prof. Jonathan Kelly, STARS Laboratory, UTIAS, UofT
 		<ul>
 			<li>
-        Optimized trajectory alignment by SDP relaxation to calibrate the relative extrinsic parameters of the multi-camera.
-			</li>
-      <li>
-				Independently completed GN solver dealing with scale cases and derived the Lie algebra pose perturbation model.
+				Optimized trajectory alignment by SDP relaxation to calibrate the relative extrinsic parameters of the
+				multi-camera.
 			</li>
 			<li>
-				Realized the linear solver proposed before as a comparative method. Tested ORB-SLAM3 for generating the raw data.
+				Independently completed GN solver dealing with scale cases and derived the Lie algebra pose perturbation
+				model.
 			</li>
-      <li>
+			<li>
+				Realized the linear solver proposed before as a comparative method. Tested ORB-SLAM3 for generating the
+				raw data.
+			</li>
+			<li>
 				Contributed to the visualization and generated diagrams in the paper.
 			</li>
 		</ul>
@@ -1617,16 +1628,15 @@
 		Supervisor: Dr. Han Dongkun, Department of Mechanical and Automation Engineering, CUHK
 		<ul>
 			<li>
-				Designed UAV control algorithm. Redesigned the barrier function and control algorithm, and found a new Lyapunov function to satisfy the time convergence requirement and stability requirement simultaneously.
+				Designed UAV control algorithm. Redesigned the barrier function and control algorithm, and found a new
+				Lyapunov function to satisfy the time convergence requirement and stability requirement simultaneously.
 			</li>
 			<li>
-				Innovatively overcame the initial velocities dilemma by introducing the term of closed barrier function.
+				Simulated the position and speed of the UAVs by MATLAB at each timestep and generated a video to
+				visualize the results.
 			</li>
-      <li>
-				Simulated the position and speed of the UAVs by MATLAB at each timestep and generated a video to visualize the results.
-			</li>
-      <li>
-				In the final presentation, we won the annual Best Project Award. I was awarded the Innovation and Creativity Scholarship.
+			<li>
+				The result won the annual Best Project Award. I was awarded the Innovation and Creativity Scholarship.
 			</li>
 		</ul>
 
@@ -1642,16 +1652,19 @@
 
 			<ul>
 				<li>
-					Responsible for designing and optimization of the mechanical devices to deliver and separate toy blocks.
+					Responsible for designing and optimization of the mechanical devices to deliver and separate toy
+					blocks.
 				</li>
 				<li>
-					Contributed to the designing and testing of the three-stage differential conveyor belt plan and vibrating plate plan.
+					Contributed to the designing and testing of the three-stage differential conveyor belt plan and
+					vibrating plate plan.
 				</li>
-        <li>
+				<li>
 					Independently designed the toy blocks assembly line by SolidWorks and designed the delivery plan.
 				</li>
-        <li>
-					Explored the feasibility of the robotic arm automatic grasping scheme, and the scheme has been implemented.
+				<li>
+					Investigated the feasibility of the robotic arm automatic grasping scheme, which has been
+					implemented and used.
 				</li>
 			</ul>
 
@@ -1662,7 +1675,8 @@
 
 			<ul>
 				<li>
-					Won 1st place in Hong Kong, Silver Award in the national final among 601 teams from 267 universities. The
+					Won 1st place in Hong Kong, Silver Award in the national final among 601 teams from 267
+					universities. The
 					result
 					was
 					featured in
@@ -1671,9 +1685,9 @@
 						website of MAE department</a>.
 				</li>
 				<li>
-					Designed and modeled the robot arm structure, implemented corresponding control algorithm on
-					embedded
-					system in C, and tested the repeatability and adjusted code and structure.
+					Designed and modeled the robot body, arm structure, implemented corresponding control algorithm on
+					STM32 in C, tested and improved the repeatability, success rate from 30% to nearly 100%, time
+					decreasing from 6min to 3min.
 				</li>
 				<li>
 					Implemented the color and pattern recognition on OpenMV. Find video <a
@@ -1691,29 +1705,27 @@
 		<p><strong>CUHK Mandarin Debate Team - <em>Captain</em></strong><span style="float:right;">May 2020 - May
 				2021</span> </p>
 		<ul>
-			<li>As the captain, coordinates over 120 members and manages daily affairs. Be responsible for competition
-				preparing,
-				mock competition organizing, weekly training.
-				As a member, read more than 20 relevant papers every week during the preparation period for
-				quick-learning
-				the field within one week.</li>
-			<li>Organized two rounds recruitment interviews with more than 100 people. Coordinated people, time, places,
-				documentation and selection. Dealt with emergency
-				situations. </li>
+			<li>Coordinated 120+ members for weekly training. Handled logistics for 10+ international competition.
+				Arranged and hosted over 100 mock competitions in one year.
+			</li>
+			<li>Organized two rounds recruitment interviews with 121 candidates. Coordinated people, time,
+				documentation and selection. </li>
 
 		</ul>
 
 		<p><strong>2021 Exemplar Tournament Freshman Mandarin Debate Competition - <em>Founder</em></strong><span
 				style="float:right;">March 2021 - May 2021</span></p>
 		<ul>
-			<li>Firstly founded the &quot;Exemplar Tournament&quot; Freshman Mandarin Debate Competition representing
-				CUHK.
-				The competition received more than 14,000HKD funding support from the school, and the results of the
-				competition is displayed on the homepage of the CUHK Office of Student Affairs.</li>
-			<li>Draw up the Tournament Regulations, supervise the
-				2-month competition process, select and communicate with the participating teams from more than 50
-				registered teams.
-				Interview and train over 20 volunteers.
+			<li>Founded the &quot;Exemplar Tournament&quot; Freshman Mandarin Debate Competition as the first
+				international Mandarin debate competition initiated by CUHK. The competition received more than 14,000
+				HKD
+				as funding from university. The results of the competition was widely advertised on the CUHK Office of
+				Student
+				Affairs
+				homepage.</li>
+			<li>Drafted the Tournament Regulations, resolved multiple emergencies during the 2-month competition period,
+				and organized
+				team registration for more than 50 universities and debate clubs all over the world.
 			</li>
 
 		</ul>
@@ -1749,7 +1761,10 @@
 		<div style="float: left">ESTR3406 Introduction to Control Systems</div>
 		<div style="margin: 0 auto; width: 200px; float: right;">A</div>
 		<div style="clear: both;"></div>
-		
+		<div style="float: left">ESTR3112 Numerical Optimization</div>
+		<div style="margin: 0 auto; width: 200px; float: right;">In progress</div>
+		<div style="clear: both;"></div>
+
 		<p>&nbsp;</p>
 
 
