--- a/index.html
+++ b/index.html
@@ -1508,7 +1508,8 @@
 			supervised by Prof. Jonathan Kelly.
 			Now I am working with my FYP research about GPU accelerated mapping under the supervision of Prof. Chen
 			Benmei.</p>
-		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.948, both ranking 1/128 at CUHK.</p>
+		<p style="text-indent: 2em;">My CGPA is 3.845, Major GPA 3.948, both ranking 1/128 in consecutive 3 years at
+			CUHK.</p>
 
 		<p>&nbsp;</p>
 
